# ros_odrive

odrive_base/src/: socket_can.cpp
odrive_ros2_control/: CMakeLists.txt  package.xml
odrive_ros2_control/src/: odrive_hardware_interface.cpp
